# ml-book

./: .gitignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
ml_book/: visualize.py
notebooks/: Decision_Trees.ipynb  feature-extraction.ipynb  ncc-plots.ipynb  perceptrons.ipynb  sentiment-analysis-hf.ipynb
src/: book.tex  refs.bib
src/chapters/: Math.tex  appendix.tex  decision-trees.tex  features.tex  foreword.tex  hpo.tex  intro.tex  knn.tex  math.tex  ml-pipeline.tex  ncc.tex  neural-networks.tex  perceptron.tex
src/images/: DT_raining_tree  DT_simple_tree  FE_img_channels.eps  FE_img_rng_image.eps  NCC_DBs_0.eps  NCC_correlated.eps  fft.eps  image-example.eps  lda-1.eps  lda-2.eps  mfcc-spec.eps  moby-raw.eps  moby-stopwords.eps  moby-tfidf.eps  pca-1.eps  pca-2.eps  prototypes_0.eps  prototypes_1.eps  prototypes_2.eps  tsne-1.eps  tsne-2.eps  tsne-3.eps
src/lib/: definitions.tex
src/svg-inkscape/: DT_comparison_0_svg-tex.pdf_tex  DT_comparison_1_svg-tex.pdf_tex  DT_comparison_2_svg-tex.pdf_tex  DT_simple_tree_svg-tex.pdf_tex  NCC_3_class_svg-tex.pdf_tex  NCC_DBs_0_svg-tex.pdf_tex  NCC_DBs_1_svg-tex.pdf_tex  NCC_correlated_svg-tex.pdf_tex  NCC_frame_0_svg-tex.pdf_tex  NCC_frame_1_svg-tex.pdf_tex  NCC_frame_2_svg-tex.pdf_tex  NCC_frame_3_svg-tex.pdf_tex  NCC_frame_4_svg-tex.pdf_tex  NCC_lin_classifier_svg-tex.pdf_tex  NCC_uncorrelated_svg-tex.pdf_tex
